# Qianji-Trans

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
billing/: checker.py  const.py  db.py  file_utils.py  logger.py  main.py
billing/bill_loader/: __init__.py  alipay.py  base.py  wechat.py
billing/qianji/: qianji.py
test/: conftest.py  test_alipay_loader.py  test_wechat_loader.py
test/test_config/: account_rules.json  category_rules.json
